binding: Returns null if there is no valid event handler.

Simply makes DOM attributes for event handlers return null if there is
no event handler.

BUG=613671

Review-Url: https://codereview.chromium.org/2187503002
Cr-Commit-Position: refs/heads/master@{#408109}

Former-commit-id: f6c6da33a4f1a2125f393a525bbecee5a096add7